--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-PYTHON_ENV=development
-NEO4J_URL=http://localhost:7474
-NEO4J_IP=172.17.0.3:7474
+# DATABASE neo4j
+NEO4J_DATABASE_URL=http://localhost:7474
+NEO4J_DATABASE_IP=172.18.0.3:7474
+# DATABASE TEST neo4j-test
+NEO4J_DATABASE_URL_TEST=http://localhost:7475
+NEO4J_DATABASE_IP_TEST=172.18.0.2:7474
