Change value of NEO4J_DATABASE_URL and NEO4J_DATABASE_URL_TEST

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
+# FLASK
+FLASK_APP=main.py
+FLASK_DEBUG=1
 # DATABASE neo4j
-NEO4J_DATABASE_URL=http://localhost:7474
+NEO4J_DATABASE_URL=http://tree-skills_db:7474
 NEO4J_DATABASE_IP=172.18.0.3:7474
 # DATABASE TEST neo4j-test
-NEO4J_DATABASE_URL_TEST=http://localhost:7475
+NEO4J_DATABASE_URL_TEST=http://tree-skills_testdb:7474
 NEO4J_DATABASE_IP_TEST=172.18.0.2:7474
